fix: overflow-x issue and home wallpaper changed to the sky one

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -5,10 +5,6 @@
     align-items: center;
 }
 
-/*#presentation-cards :nth-child(2n) {*/
-/*    flex-direction: row-reverse;*/
-/*}*/
-
 .presentation-card {
     margin: 20px;
     border: 1px solid lightgray;
@@ -20,9 +16,9 @@
 }
 
 .presentation-card-content {
+    text-align: center;
     padding: 50px;
     display: flex;
-    /*!* TODO : Fix #presentation-cards :nth-child(2n) to don't have to use !important*!*/
     flex-direction: column !important;
     justify-content: center;
     align-items: center;
